# python-project-52

./: .gitignore  .sonarcloud.properties  Makefile  README.md  build.sh  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: python-ci.yml  sonar.yml
labels/: admin.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: label_create.html  label_update.html
statuses/: admin.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: status_delete.html
task_manager/: settings.py  urls.py
tasks/: filters.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: statuses.json
tasks/forms/: __init__.py  task_form.py
tasks/migrations/: 0001_initial.py  0002_label_task.py
tasks/models/: __init__.py  label.py  status.py  task.py
tasks/templates/tasks/: index.html  label_delete.html  label_list.html  status_create.html  status_list.html  status_update.html  task_create.html  task_delete.html  task_detail.html  task_list.html  task_update.html
tasks/tests/: __init__.py  test_filter.py  test_label.py  test_status.py  test_task.py
tasks/views/: __init__.py  label_views.py  status_views.py  task_views.py
templates/: base.html
users/: forms.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/templates/users/: delete.html  login.html  register.html  update.html  user_list.html
