[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-bootstrap5>=26.2",
    "django-filter>=25.2",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "rollbar>=1.3.0",
    "whitenoise[brotli]>=6.12.0",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "ipython>=9.15.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.20",
]

[tool.ruff]
extend-exclude = ["migrations", "settings.py"]
